--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -99,6 +99,7 @@
     }
     .wrap-img {
       margin-bottom: 20px;
+      margin: 0 auto;
     }
     .advantages-list {
       max-width: 200px;
@@ -134,9 +135,10 @@
   .welcome-section {
     background-image: url("../../img/welcome-section-mobile.jpg");
     background-size: cover;
+    background-position: center;
     height: auto;
     min-height: 75vh;
-    padding: 0 10px;
+    padding: 15px 10px;
     .wrap-content {
       max-width: 370px;
       display: block;
